# promo_detector_crew

./: LICENSE  README.md
promo_detection/: README.md  pyproject.toml  report.md
promo_detection/src/promo_detection/: crew.py  main.py
promo_detection/src/promo_detection/config/: agents.yaml  tasks.yaml
